# tinysat

./: .gitignore  CMakeLists.txt  CNF.cpp  CNF.h  README  solver.cpp  solver.h
data/: equation1
src/: solver.cpp
src/IOUtil/: cnfreader.cpp  cnfreader.h
src/Logic/: CNF.cpp  CNF.h  DisClause.cpp  DisClause.h  Literal.cpp  Literal.h  LiteralTerm.cpp  LiteralTerm.h  Utils.cpp  Utils.h
